----------
v6.0.5-git
----------

[mms] Correctly generate self URLs if a URL parameter is altered by the current
      message action (Bug #12058).
[mms] Fix possible issue creating folder tree if multiple special mailboxes
      appeared in the same branch (Bug #12050).


------
v6.0.4
------

[mms] Improved detection of charset in text/html message parts.
[mms] Fix displaying dynamic compose screen when sent-mail preferences are
      locked (Bug #12009).
[mms] Fix usage of textContent property on IE8 (Bug #12012).
[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).
[jan] Fix display of end dates/times of iTip attachments (Bug #11976).
[mms] Fix Reply all/list buttons on basic compose page (Bug #11990).
[mms] Fix deleting virtual folders/filters from preferences page (Bug #11982).
[mms] Fix saving mailbox expansion state in basic folders view (Bug #11979).
[mms] Hide attachment upload UI in dynamic view if file uploads are disabled.
[jan] Fix JavaScript errors with Internet Explorer 8.
[mms] Fix display of mail log icons on the basic message page (Bug #11964).
[jan] Fix stripping attachments in dynamic view (aarno.sandvik@helsinki.fi,
      Bug #11959).
[mms] Workaround broken Message-IDs generated by Outlook when replying to a
      message (Bug #11953).
[mms] Fix display of attachment name in basic compose screen (Bug #11947).


------
v6.0.3
------

[mms] Re-add apply mail filters action in dynamic view.
[mms] Improved parsing of References header when replying to a message.
[mms] Fix verifying an enveloped signed & encrypted S/MIME message (Bug
      #11874).
[mms] Fix converting charset of signature/trailer in compose message if not
      sending in UTF-8 (Bug #11898).
[mms] Fix redirection to mailbox page after sending message in minimal view
      (Thomas Jarosch <thomas.jarosch@intra2net.com>, Bug #11897).
[mms] Fix duplicate signature being added to compose messages in minimal view