@@ -2,6 +2,8 @@
 v6.0.5-git
 ----------
 
+[mms] Fix regression in displaying user-defined virtual folders in folder
+      listings.
 [mms] Correctly generate self URLs if a URL parameter is altered by the current
       message action (Bug #12058).
 [mms] Fix possible issue creating folder tree if multiple special mailboxes
